<resources>
    <string name="app_name">Image Compressor</string>

    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="register_link">Click here to Register</string>
    <string name="login_link">Have an Account? Click here</string>
    <string name="login_header">Account Login</string>
    <string name="register_header">Create New Account</string>

    <string name="username_placeholder">Enter Username here</string>
    <string name="password_placeholder">Enter Password</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="email_placeholder">Enter your Email</string>

    <string name="confirmation_message">A mail has been sent to the email address provided. Check your mailbox to confirm your account</string>
    <string name="username_error">Provide a valid email</string>
    <string name="password_error">Invalid Password. Enter your password</string>
    <string name="email_error">Invalid Email. Enter a Valid email</string>
    <string name="username_empty">Username is required</string>
    <string name="password_empty">Password is required</string>
    <string name="email_empty">Valid email address is required</string>

    <string name="camera_launch">Take a picture</string>
    <string name="files_launch">Select a picture</string>

    <string name="message_loading">Please Wait</string>

    <string name="confirm_delete">Are you sure you want to delete this file?</string>
    <string name="confirm_compress">Are you sure you want to compress this file?</string>

    <string name="change_directory">Change Current Directory</string>
    <string name="compress_success">Compression Successful</string>
    <string name="compress_fail">Compression Failed</string>
    <string name="title_activity_home">Home</string>

    <string name="permission_denied">Permission Denied</string>

    <string name="delete_success">Images was deleted!</string>
    <string name="delete_failure">Image deletion failed</string>
    <string name="saved_message">Image Saved at %1$s</string>
    <string name="not_saved">Image not saved!</string>
    <string name="error">Error finding image</string>

    <string name="compression_rate">Compression Rate: %1$s %2$s</string>
    <string name="initial_size">Image Initial Size: %1$s MB</string>
    <string name="final_size">Image Final Size: %1$s MB</string>
    <string name="image_name">Image Name: %1s</string>
    <string name="hint_download">Enter Download Url</string>
    <string name="download_text">Download</string>
</resources>
