<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yung_coder.oluwole.imagecompressor.Register">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/register_header"
        android:textColor="#000"
        android:textSize="26sp"
        android:layout_alignParentTop="true"
        android:textStyle="bold" />
    <ScrollView
        android:id="@+id/register_container"
        android:layout_width="match_parent"
        android:layout_below="@+id/register_title"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/username_placeholder"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/register_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/password_placeholder"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="20sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/register_confirm_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/confirm_password_placeholder"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="20sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:text="@string/register_button"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </ScrollView>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/reg_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:visibility="gone" />

</RelativeLayout>
